@@ -1,3 +1,8 @@
+2009-12-29  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/generic/invertappr.c (mpn_invertappr): Allocate scratch space
+	when caller passed NULL.
+
 2009-12-28  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/generic/toom_couple_handling.c: Prefix name with mpn_.
